--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
+        <receiver android:name=".broadcast.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="alarm" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
