--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
+        <receiver
+            android:name=".broadcast.Notification"
+            android:enabled="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
